--- a/Html/form.html
+++ b/Html/form.html
@@ -5,6 +5,8 @@
 <body>
 
     <form method="" action="" enctype="">
+        <fieldset>
+            <legend>Sign Up</legend>
         Username:       <input type="text" name="" value="" /> <br>
         Password:       <input type="password" name="" value="" /> <br>
         Email:          <input type="email" name="" value="" /> <br>
@@ -29,6 +31,7 @@
                         <input type="button" name="" value="Click" />
                         <input type="submit" name="" value="Submit" />
                         <input type="reset" name="" value="Reset" />
+        </fieldset>
     </form>
 </body>
 </html>
